# ibm_compare

./: .gitignore  Readme.md  append.md  main.md
IBFE的几个算例/euler/: IBMesh.h
IBFE的几个算例/ex0/: IBInterpolation.h
IBFE的几个算例/ex1/: IBMesh.h
IBFE的几个算例/ex2/: IBInterpolation.h
SAV方法和其他方法的比较/投影方法的比较/: a.cpp  exact_solution.py  exact_solutions.py  projection.py  sav_projection.py  solutions.py  结果比较.xlsx
SAV方法和其他方法的比较/整体求解的比较/: box_uniform_exact.py  concise.py  demo_stokes-taylor-hood.py  desperated.py  sav-taylor-hood.py  solutions.py  taylor-hood.py
cpp_to_python/: .gitignore  CMakeLists.txt  IBInterpolation.cpp  IBInterpolation.py  IBM-FE.cpp  IBMesh.h  IBMesh.py  compile_cpp_code.cpp  find_cell.cpp  main.py  test_function.cpp  test_function.py  test_struct_vector.cpp  test_struct_vector.py  test_vector.cpp  test_vector.py  utilities.cpp  utilities.h
cpp_to_python/pure_finite/: IBInterpolation.py  main.cpp
cpp_to_python/with_delta/: CMakeLists.txt  IBInterpolation.cpp  IBInterpolation.h  IBInterpolation.py  IBMesh.h  IBMesh.py
cpp_to_python/with_delta_solid_not_move/: IBInterpolation.h  IBInterpolation.py  IBMesh.cpp  main.py
focus_on_deformation/: CMakeLists.txt  IBInterpolation.h  Poisson.h  Poisson.ufl  PressureUpdate.h  main.cpp  main_demo.cpp  对位移求导.py
基准算例/方腔流/: a.py
直接求解IBM/: ElasticStructure.ufl  IBInterpolation.cpp  IBInterpolation.h  PressureUpdate.ufl  VelocityUpdate.ufl  generate.py  main.cpp
直接求解IBM_2/: CMakeLists.txt  ElasticStructure.h  IBInterpolation.h  IBMesh.h  Poisson.h  PressureUpdate.h  PressureUpdate.ufl  TentativeVelocity.h  TentativeVelocity.ufl  VelocityUpdate.h  main.cpp  my_assemble.cpp  readme.md  test_gauss_derivative.cpp  验证右端项的组装.py
真实解/: a.py  exact_solutions.py  公式推导.m
